fixed spacing in projects section

--- a/style.css
+++ b/style.css
@@ -559,6 +559,9 @@ projects section
 	height: 100%;
 	border-bottom: 1px solid darkgray;
 	margin-bottom: 4rem;
+	display: grid;
+	grid-template-columns: 1fr;
+	gap: 4rem;
 }
 
 .projects__text {
@@ -609,6 +612,8 @@ projects section
 	color: white;
 }
 
+
+
 .img {
 	width: 100%;
 	height: 100%;
@@ -637,7 +642,7 @@ projects section
 		display: grid;
 		grid-template-columns: 1fr 1fr;
 		border-bottom: none;
-		gap: 2rem;
+		gap: 4rem;
 	}
 
 	.project__buttons {
@@ -647,9 +652,7 @@ projects section
 
 /* about section */
 .about {
-	width: 70%;
 	margin-bottom: 4rem;
-	/* min-height: 100vh; */
 }
 
 .about__container {
@@ -693,9 +696,8 @@ projects section
 	display: grid;
 	justify-content: center;
 	align-items: center;
-	
-	/* border: 1px solid orange; */
 }
+
 .about__skilllist div p {
 	color: white;
 	text-align: center;
@@ -703,8 +705,6 @@ projects section
 
 .about__skills i {
 	font-size: 4rem;
-	/* height: 100%; */
-	/* margin-bottom: 4rem; */
 }
 
 @media screen and (min-width: 992px) {
